Cambio de logo y se agregan datos
Se cambia el logo del navegador, y se agrega información cuando se da clic en el botón ver

--- a/Myproject/app/Views/user/user.html
+++ b/Myproject/app/Views/user/user.html
@@ -7,7 +7,7 @@
         <title>USER</title>
         <!---Icon -->
         <link rel="icon" type="image/png"
-            href="../../../public/assets/img/logo/logo.png"
+            href="../../../public/assets/img/logo/logo.jpg"
             sizes="16x16">
         <!---Container css-->
         <!---cdn Bootstrap-->
