--- a/games/games_memory/assets/css/style.css
+++ b/games/games_memory/assets/css/style.css
@@ -5,7 +5,7 @@
 
 body {
     background-color: #300300; /* Rojo oscuro */
-    color: #ffffff; /* Texto blanco para contrastar */
+    color: #ce1717; /* Texto blanco para contrastar */
     font-family: honk;
     font-size: large;
     text-transform: uppercase !important;
